04 February 2022 Petasis George <petasis@iit.demokritos.gr>:
 * backend-django/clarin_backend/utils.py: Fixes for dockerisation.

12 January 2022 Petasis George <petasis@iit.demokritos.gr>:
 * backend-django/openapi/:
 * backend-django/DjangoClarin/settings.py:
 * backend-django/DjangoClarin/urls.py:
 * backend-django/requirements.txt: Added support for OpenAI through the
 drf-spectacular Django package.

07 January 2022 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.html:
 * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.ts:
 * clarin-angular/src/app/helpers/annotation.ts: Krippendorff’s alpha.

04 January 2022 Petasis George <petasis@iit.demokritos.gr>:
 * backend-django/clarin_backend/views.py: Added "Content-Disposition" HTTP
 header in "ExportCollectionView".

03 January 2022 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.html:
 * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.ts:
 * clarin-angular/src/app/components/views/compare-documents/compare-documents.component.ts:
 * clarin-angular/src/app/helpers/annotation.ts:
 * clarin-angular/src/app/helpers/globalFunctions.ts:
 * clarin-angular/src/css/clarin-material.scss: Fleiss' Kappa.

 * clarin-angular/src/app/components/views/main/main.component.ts:
 * clarin-angular/src/app/components/controls/toolbar-select-document/toolbar-select-document.component.ts:
 Document selection toolbar now "remembers" selection (saves selected ids in
 local store).

29 December 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/annotation-set-inspector/annotation-set-inspector.component.html: