@@ -1,0 +1,42 @@
+<Directory "/var/www/clarin-el-annotation-tool/backend-django/DjangoClarin/">
+  <Files wsgi.py>
+    Require all granted
+  </Files>
+</Directory>
+
+<Directory "/var/www/clarin-el-annotation-tool/backend-django/static">
+  Require all granted
+</Directory>
+
+Alias /clarin-ellogon-services /opt/WebServices/EllogonAnnotationTool/ellogon-apache-services/apache-rivet/site
+<Directory /opt/WebServices/EllogonAnnotationTool/ellogon-apache-services/apache-rivet/site/>
+  AddOutputFilterByType DEFLATE text/html text/plain application/xml application/json
+  DirectoryIndex index.html index.htm index.shtml index.cgi index.tcl index.rvt
+  Header set Access-Control-Allow-Origin "*"
+  AllowOverride None
+  Order allow,deny
+  Allow from all
+  Require all granted
+</Directory>
+
+<VirtualHost *:80>
+  WSGIScriptAlias / /var/www/clarin-el-annotation-tool/backend-django/DjangoClarin/wsgi.py \
+      process-group=annotation.ellogon.org
+
+  Alias /robots.txt  /var/www/clarin-el-annotation-tool/backend-django/static/robots.txt
+  Alias /favicon.ico /var/www/clarin-el-annotation-tool/backend-django/static/favicon.ico
+  Alias /static/     /var/www/clarin-el-annotation-tool/backend-django/static/
+  Alias /assets/     /var/www/clarin-el-annotation-tool/backend-django/static/assets/
+
+  RewriteEngine On
+  # LogLevel alert rewrite:trace2
+  RewriteCond %{REQUEST_URI} .*\.js
+  RewriteCond %{REQUEST_URI} !^/static/
+  RewriteRule .*  /static$0  [PT,L]
+
+  WSGIDaemonProcess annotation.ellogon.org processes=2 threads=25 \
+      python-home=/var/www/clarin-el-annotation-tool/backend-django/apache_venv \
+      python-path=/var/www/clarin-el-annotation-tool/backend-django \
+      maximum-requests=10000
+  WSGIProcessGroup  annotation.ellogon.org
+</VirtualHost>
