@@ -1,0 +1,17 @@
+# SECURITY WARNING: don't run with debug turned on in production!
+DEBUG=True
+# Email:
+EMAIL_URL=smtp+tls://ellogon_annotation_tool:ellogon_annotation_tool@mail.iit.demokritos.gr:587
+DEFAULT_FROM_EMAIL=ellogon_annotation_tool@iit.demokritos.gr
+DEFAULT_FROM_EMAIL_NO_REPLY=ellogon-annotation-tool-no-reply@iit.demokritos.gr
+# Database:
+DATABASE_URL=mysql://ellogon_annotation_tool:ellogon_annotation_tool@127.0.0.1:3306/ellogon_annotation_tool
+# Secret Key:
+SECRET_KEY="flp5bys1x0^es6d2ji77^=vmp5%mo&lc@)9$40emn5*=&$6a184564556465"
+# Use "," for adding more than one, i.e. ALLOWED_HOSTS=a,b,c
+ALLOWED_HOSTS=localhost
+MONGO_DB_HOST="localhost"
+MONGO_DB_PORT=27017
+MONGO_USERNAME="ellogon_annotation_tool"
+MONGO_PASSWORD="ellogon_annotation_tool"
+MONGO_DATABASE="ellogon_annotation_tool"
