@@ -1,0 +1,16 @@
+# Loads the module.
+LoadModule rivet_module modules/mod_rivet.so
+
+# Let the module handle .rvt and .tcl files.
+#AddType application/x-httpd-rivet  rvt
+#AddType application/x-rivet-tcl    tcl
+
+# The default charset can be specified in the configuration
+AddType "application/x-httpd-rivet; charset=utf-8" .rvt
+AddType "application/x-rivet-tcl; charset=utf-8"   .tcl
+
+<FilesMatch "\.tcl$">
+   SetHandler application/x-rivet-tcl
+</FilesMatch>
+
+RivetServerConf GlobalInitScript "source -encoding utf-8 /opt/WebServices/EllogonAnnotationTool/ellogon-apache-services/apache-rivet/server/server_init.tcl"
