@@ -1,6 +1,9 @@
 04 February 2022 Petasis George <petasis@iit.demokritos.gr>:
  * backend-django/clarin_backend/utils.py: Fixes for dockerisation.
 
+03 February 2022 Petasis George <petasis@iit.demokritos.gr>:
+ * docker/*: Started support for dockerisation of the annotation tool.
+
 12 January 2022 Petasis George <petasis@iit.demokritos.gr>:
  * backend-django/openapi/:
  * backend-django/DjangoClarin/settings.py:
